additions to BerghA - currently not working
BerghA currently gets stuck in an infinite loop

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "injured-engine",
+   "execution_count": 70,
+   "id": "isolated-palace",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,15 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "global-filing",
+   "id": "printable-collect",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "three-sudan",
+   "execution_count": 71,
+   "id": "baking-passion",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,6 @@
     "    end\n",
     "    \n",
     "    #A0\n",
-    "    i=0\n",
     "    while(true)\n",
     "        #A1\n",
     "        #Note: cones in S are 1-indexed.\n",
@@ -83,17 +82,42 @@
     "        end\n",
     "        \n",
     "        #A2 - find stacky points (in terms of coefficients) derived from interior points\n",
-    "        P=[]\n",
+    "        P=Array{Int64,1}[]\n",
     "        for (point,cone) in intPoints\n",
     "            stackyPoint=coneRayDecomposition(cone,rayMatrix,point,X.scalars)\n",
     "            push!(P,stackyPoint)\n",
     "        end\n",
-    "        return P\n",
     "        \n",
     "        #A2 - find smallest element of P with respect to lex ordering.\n",
+    "        print(P)\n",
     "        psi=minimalByLex(P)\n",
-    "        return psi\n",
+    "\n",
+    "        #A3 - perform root construction\n",
+    "        X=rootConstructionDistinguishedIndices(X,D,psi)\n",
+    "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "        \n",
+    "        #A3 - modify psi with respect to root construction\n",
+    "        for i in 1:length(psi)\n",
+    "            if D[i]==1\n",
+    "                psi[i]=1\n",
+    "            end\n",
+    "        end\n",
+    "        \n",
+    "        while(count(x->x>0,psi)>1)\n",
+    "            #A4 - perform stacky star subdivision\n",
+    "            supportCone=findall(x->x==1,psi)\n",
+    "            blowupRay=rayMatrix*psi\n",
+    "            X=stackyBlowup(X,supportCone,blowupRay)\n",
+    "        \n",
+    "            #A4 - modify psi\n",
+    "            newpsi=zeros(Int64,length(psi)+1)\n",
+    "            for i in 1:length(psi)\n",
+    "                if psi[i]>1\n",
+    "                    newpsi[i]=psi[i]-1\n",
+    "                end\n",
+    "            end\n",
+    "            newpsi[end]=1\n",
+    "        end\n",
     "    end\n",
     "    return X\n",
     "end"
@@ -101,44 +125,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "offshore-milton",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000002482970), [2, 1], Dict(\"1,2\" => 1,\"1,0\" => 2))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F=makeStackyFan([1 0;1 2],[[0,1]],[2,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "id": "latest-bristol",
+   "execution_count": 72,
+   "id": "portable-excess",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "[[$1$, $2$]]"
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 2\n",
+       "1 0</pre></details>"
       ],
       "text/plain": [
-       "1-element Array{Any,1}:\n",
-       " [1, 2]"
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 1}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 2\n",
+       "\t1 0\n"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 2;1 0],INPUT_CONES=[[0,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "trained-thanks",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000019f0b220), [1, 1], Dict(\"1,2\" => 1,\"1,0\" => 1))"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F=addStackStructure(X,[1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "documentary-medicare",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1]]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Interrupting polymake is not safe.\n",
+      "│ SIGINT is disabled while waiting for polymake to finish its computations.\n",
+      "└ @ Polymake /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:47\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mInterruptException:\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mInterruptException:\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] sigatomic_end at ./c.jl:425 [inlined]",
+      " [2] disable_sigint at ./c.jl:448 [inlined]",
+      " [3] give(::Polymake.BigObjectAllocated, ::String) at /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:41",
+      " [4] getproperty at /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:59 [inlined]",
+      " [5] toric_blowup(::Array{Int64,1}, ::Polymake.BigObjectAllocated, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:261",
+      " [6] stackyBlowup(::StackyFan, ::Array{Int64,1}, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:320",
+      " [7] BerghA(::StackyFan, ::Array{Int64,1}) at ./In[71]:61",
+      " [8] top-level scope at In[74]:1",
+      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
     }
    ],
    "source": [
@@ -147,8 +225,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "caroline-decrease",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=[0,1,2,3]\n",
+    "A[end]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "standard-personal",
+   "id": "passive-plymouth",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-harmony",
+   "id": "wrapped-messaging",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,23 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-estate",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "military-opening",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "checked-argument",
+   "id": "functioning-preference",
    "metadata": {},
    "outputs": [],
    "source": []
