--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "isolated-palace",
+   "execution_count": 108,
+   "id": "laughing-dispute",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,15 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "printable-collect",
+   "id": "alien-footwear",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "baking-passion",
+   "execution_count": 109,
+   "id": "otherwise-presentation",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +61,7 @@
     "    \n",
     "    #A0\n",
     "    while(true)\n",
+    "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "        #A1\n",
     "        #Note: cones in S are 1-indexed.\n",
     "        S=filter(cone->distinguishedAndMultiplicity(cone,rayMatrix,D),coneList)\n",
@@ -89,12 +90,10 @@
     "        end\n",
     "        \n",
     "        #A2 - find smallest element of P with respect to lex ordering.\n",
-    "        print(P)\n",
     "        psi=minimalByLex(P)\n",
     "\n",
     "        #A3 - perform root construction\n",
     "        X=rootConstructionDistinguishedIndices(X,D,psi)\n",
-    "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "        \n",
     "        #A3 - modify psi with respect to root construction\n",
     "        for i in 1:length(psi)\n",
@@ -105,9 +104,11 @@
     "        \n",
     "        while(count(x->x>0,psi)>1)\n",
     "            #A4 - perform stacky star subdivision\n",
-    "            supportCone=findall(x->x==1,psi)\n",
-    "            blowupRay=rayMatrix*psi\n",
-    "            X=stackyBlowup(X,supportCone,blowupRay)\n",
+    "            supportCone=findall(x->x!=0,psi)\n",
+    "            blowupRay=convert(Array{Int64,1},vec([x for x in findBarycenter(supportCone,X.fan)]))\n",
+    "            X=stackyBlowup(X,[x-1 for x in supportCone],blowupRay)\n",
+    "            \n",
+    "            D=push!(D,1)\n",
     "        \n",
     "            #A4 - modify psi\n",
     "            newpsi=zeros(Int64,length(psi)+1)\n",
@@ -117,6 +118,7 @@
     "                end\n",
     "            end\n",
     "            newpsi[end]=1\n",
+    "            psi=newpsi\n",
     "        end\n",
     "    end\n",
     "    return X\n",
@@ -125,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "portable-excess",
+   "execution_count": 110,
+   "id": "dense-preserve",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
        "\t1 0\n"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,65 +160,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "trained-thanks",
+   "execution_count": 111,
+   "id": "small-individual",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000019f0b220), [1, 1], Dict(\"1,2\" => 1,\"1,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a6338a0), [3, 4], Dict(\"1,2\" => 3,\"1,0\" => 4))"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=addStackStructure(X,[1,1])"
+    "F=addStackStructure(X,[3,4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "documentary-medicare",
+   "execution_count": 112,
+   "id": "global-montreal",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 1]]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: Interrupting polymake is not safe.\n",
-      "│ SIGINT is disabled while waiting for polymake to finish its computations.\n",
-      "└ @ Polymake /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:47\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mInterruptException:\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mInterruptException:\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] sigatomic_end at ./c.jl:425 [inlined]",
-      " [2] disable_sigint at ./c.jl:448 [inlined]",
-      " [3] give(::Polymake.BigObjectAllocated, ::String) at /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:41",
-      " [4] getproperty at /home/kitty/.julia/packages/Polymake/qeOTA/src/perlobj.jl:59 [inlined]",
-      " [5] toric_blowup(::Array{Int64,1}, ::Polymake.BigObjectAllocated, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:261",
-      " [6] stackyBlowup(::StackyFan, ::Array{Int64,1}, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:320",
-      " [7] BerghA(::StackyFan, ::Array{Int64,1}) at ./In[71]:61",
-      " [8] top-level scope at In[74]:1",
-      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a8025e0), [12, 12, 1], Dict(\"1,2\" => 12,\"1,0\" => 12,\"1,1\" => 1))"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "caroline-decrease",
+   "id": "about-transmission",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "passive-plymouth",
+   "id": "purple-teach",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -256,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrapped-messaging",
+   "id": "missing-preparation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functioning-preference",
+   "id": "progressive-universe",
    "metadata": {},
    "outputs": [],
    "source": []
