--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "laughing-dispute",
+   "execution_count": 293,
+   "id": "fundamental-contamination",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,15 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alien-footwear",
+   "id": "latter-johns",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "otherwise-presentation",
+   "execution_count": 294,
+   "id": "proof-harvard",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
     "function BerghA(F::StackyFan,D::Array{Int64,1})\n",
     "    X=deepcopy(F)\n",
     "    rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
-    "    coneList=convertIncidenceMatrix(X.fan.MAXIMAL_CONES)\n",
+    "    coneList=getCones(X.fan)\n",
     "    dim=size(rayMatrix,2)\n",
     "    l=size(rayMatrix,1)\n",
     "    #check if the vector D has length equal to the number of rays in F\n",
@@ -62,9 +62,12 @@
     "    #A0\n",
     "    while(true)\n",
     "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
+    "        coneList=getCones(X.fan)\n",
     "        #A1\n",
     "        #Note: cones in S are 1-indexed.\n",
-    "        S=filter(cone->distinguishedAndMultiplicity(cone,rayMatrix,D),coneList)\n",
+    "        S=filter(cone->distinguishedAndIntPoint(cone,rayMatrix,D),coneList)\n",
+    "        printn(rayMatrix)\n",
+    "        printn(S)\n",
     "        if S==[]\n",
     "            break\n",
     "        end\n",
@@ -77,6 +80,9 @@
     "        for cone in Smax\n",
     "            C=coneConvert(cone,rayMatrix)\n",
     "            coneIntPoints=interiorPoints(C)\n",
+    "            if coneIntPoints==nothing\n",
+    "                return C\n",
+    "            end\n",
     "            for point in coneIntPoints\n",
     "               push!(intPoints,(point,cone)) \n",
     "            end\n",
@@ -91,13 +97,13 @@
     "        \n",
     "        #A2 - find smallest element of P with respect to lex ordering.\n",
     "        psi=minimalByLex(P)\n",
-    "\n",
+    "        \n",
     "        #A3 - perform root construction\n",
     "        X=rootConstructionDistinguishedIndices(X,D,psi)\n",
     "        \n",
     "        #A3 - modify psi with respect to root construction\n",
     "        for i in 1:length(psi)\n",
-    "            if D[i]==1\n",
+    "            if D[i]==1 && psi[i]>0\n",
     "                psi[i]=1\n",
     "            end\n",
     "        end\n",
@@ -105,9 +111,7 @@
     "        while(count(x->x>0,psi)>1)\n",
     "            #A4 - perform stacky star subdivision\n",
     "            supportCone=findall(x->x!=0,psi)\n",
-    "            blowupRay=convert(Array{Int64,1},vec([x for x in findBarycenter(supportCone,X.fan)]))\n",
-    "            X=stackyBlowup(X,[x-1 for x in supportCone],blowupRay)\n",
-    "            \n",
+    "            X=stackyBlowup(X,[x-1 for x in supportCone],findBarycenter(supportCone,X.fan))\n",
     "            D=push!(D,1)\n",
     "        \n",
     "            #A4 - modify psi\n",
@@ -127,105 +131,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "dense-preserve",
+   "execution_count": 295,
+   "id": "thick-bishop",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>1 2\n",
-       "1 0</pre></details>"
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 2 0\n",
+       "1 0 3</pre></details>"
       ],
       "text/plain": [
        "type: NormalToricVariety\n",
        "\n",
        "INPUT_CONES\n",
-       "\t{0 1}\n",
+       "\t{0 1 2}\n",
        "\n",
        "INPUT_RAYS\n",
-       "\t1 2\n",
-       "\t1 0\n"
+       "\t1 0 0\n",
+       "\t1 2 0\n",
+       "\t1 0 3\n"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 2;1 0],INPUT_CONES=[[0,1]])"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 2 0; 1 0 3],INPUT_CONES=[[0,1,2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "small-individual",
+   "execution_count": 296,
+   "id": "medieval-trunk",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a6338a0), [3, 4], Dict(\"1,2\" => 3,\"1,0\" => 4))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001c14f390), [1, 1, 1], Dict(\"1,0,3\" => 1,\"1,2,0\" => 1,\"1,0,0\" => 1))"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=addStackStructure(X,[3,4])"
+    "F=addStackStructure(X,[1,1,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "global-montreal",
+   "execution_count": 297,
+   "id": "virgin-stress",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polymake.Integer[1 0 0; 1 2 0]Polymake.Integer[1 2 0]Polymake.Integer[1 0 0]Polymake.Integer[1 0 0; 1 2 0]Polymake.Integer[1 2 0]Polymake.Integer[1 0 0][1 0 0; 1 2 0; 1 0 3]\n",
+      "Any[[0, 1, 2], [1, 2]]\n",
+      "Polymake.Integer[1 0 0; 1 2 0]"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mBoundsError: attempt to access 3-element Array{Int64,1} at index [0]\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mBoundsError: attempt to access 3-element Array{Int64,1} at index [0]\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] setindex!(::Array{Int64,1}, ::Int64, ::Int64) at ./array.jl:847",
+      " [2] coneRayDecomposition(::Array{Int64,1}, ::Array{Int64,2}, ::Array{Polymake.Integer,1}, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:774",
+      " [3] BerghA(::StackyFan, ::Array{Int64,1}) at ./In[294]:45",
+      " [4] top-level scope at In[297]:1",
+      " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "id": "talented-miniature",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polymake.Integer[3 2 3; 1 2 0; 5 4 6]Polymake.Rational[1 0 0 0; 1 3 2 3; 1 1 2 0; 1 5 4 6; 1 4 4 3; 1 8 6 9; 1 6 6 6; 1 9 8 9]"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> Polytope<Rational></dd> </dl><details><summary>POINTS</summary><pre>1 0 0 0\n",
+       "1 3 2 3\n",
+       "1 1 2 0\n",
+       "1 5 4 6\n",
+       "1 4 4 3\n",
+       "1 8 6 9\n",
+       "1 6 6 6\n",
+       "1 9 8 9</pre></details>"
+      ],
+      "text/plain": [
+       "type: Polytope<Rational>\n",
+       "\n",
+       "POINTS\n",
+       "  1  0  0  0\n",
+       "  1  3  2  3\n",
+       "  1  1  2  0\n",
+       "  1  5  4  6\n",
+       "  1  4  4  3\n",
+       "  1  8  6  9\n",
+       "  1  6  6  6\n",
+       "  1  9  8  9\n"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P=interiorPoints(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "id": "numerous-wallace",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a8025e0), [12, 12, 1], Dict(\"1,2\" => 12,\"1,0\" => 12,\"1,1\" => 1))"
+       "pm::Matrix<pm::Integer>\n"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "BerghA(F,[1,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "about-transmission",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A=[0,1,2,3]\n",
-    "A[end]"
+    "P.INTERIOR_LATTICE_POINTS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "purple-teach",
+   "id": "respiratory-sculpture",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -233,15 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "missing-preparation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "progressive-universe",
+   "id": "mathematical-facing",
    "metadata": {},
    "outputs": [],
    "source": []
