--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "wireless-beginning",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "printn (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "id": "parliamentary-george",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,10 +260,38 @@
     "    Takes a normal toric variety X, a set s corresponding to a subset of rays of X, and a (optional) polymake vector,\n",
     "    v, blow up X at v. If v is not provided, blow up X at the barycenter of s.\n",
     "\n",
+    "# Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 1 0;1 0 1;1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
+    "\n",
+    "julia>toric_blowup([0, 1, 2, 3], X, nothing)\n",
+    "INPUT_CONES\n",
+    "{0 1 4}\n",
+    "{0 2 4}\n",
+    "{2 3 4}\n",
+    "{1 3 4}\n",
+    "INPUT_RAYS\n",
+    "1 0 0\n",
+    "1 1 0\n",
+    "1 0 1\n",
+    "1 1 1\n",
+    "2 1 1\n",
+    "\n",
+    "julia>toric_blowup([0], X, nothing)\n",
+    "INPUT_CONES\n",
+    "{0 2 3}\n",
+    "{0 1 3}\n",
+    "INPUT_RAYS\n",
+    "1 0 0\n",
+    "1 1 0\n",
+    "1 0 1\n",
+    "1 1 1\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "function toric_blowup(s, X, v)\n",
     "    s = [i + 1 for i in s]\n",
+    "    # If v is not provided, take v as the barycenter\n",
     "    if v==nothing\n",
     "        v=findBarycenter(s,X)\n",
     "    end\n",
@@ -293,6 +321,7 @@
     "            end\n",
     "        end\n",
     "    end\n",
+    "    # Remove duplicates\n",
     "    clStar = unique(clStar)\n",
     "    \n",
     "    n = size(rayMatrix, 1) + 1\n",
@@ -545,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "painful-snapshot",
    "metadata": {},
    "outputs": [
@@ -555,7 +584,7 @@
        "makeSimplicial (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "needed-letter",
    "metadata": {},
    "outputs": [
@@ -702,13 +731,53 @@
        "makeSmooth (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function makeSmooth(X)\n",
+    "\"\"\"\n",
+    "    makeSmooth(::Polymake.BigObjectAllocated)\n",
+    "\n",
+    "    Takes in a normal toric variety X and output a new smooth toric variety by iteratively blowing up.\n",
+    "    In the language of fans, these blowups are achieved by subdividing non-smooth cones.\n",
+    "\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[4 -1; 0 1],INPUT_CONES=[[0, 1]])\n",
+    "\n",
+    "julia> X.SMOOTH_FAN\n",
+    "false\n",
+    "\n",
+    "julia> makeSmooth(X).SMOOTH_FAN\n",
+    "true\n",
+    "\n",
+    "julia> makeSmooth(X).INPUT_RAYS\n",
+    "pm::Matrix<pm::Rational>\n",
+    "1 -1/4\n",
+    "0 1\n",
+    "1 0\n",
+    "\n",
+    "julia>X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 1 0;1 0 1;1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
+    "\n",
+    "julia>X.SMOOTH_FAN\n",
+    "false\n",
+    "\n",
+    "julia>makeSmooth(X).SMOOTH_FAN\n",
+    "true\n",
+    "\n",
+    "julia>makeSmooth(X).INPUT_RAYS\n",
+    "pm::Matrix<pm::Rational>\n",
+    "1 0 0\n",
+    "1 1 0\n",
+    "1 0 1\n",
+    "1 1 1\n",
+    "2 1 1\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "function makeSmooth(X::Polymake.BigObjectAllocated)\n",
     "    Y  = copy(X)\n",
     "    while(true)\n",
     "        coneList = convertIncidenceMatrix(Y.MAXIMAL_CONES)\n",
@@ -787,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "helpful-token",
    "metadata": {},
    "outputs": [
@@ -817,7 +886,7 @@
        "\t1 -2 0\n"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,8 +921,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "olive-notebook",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>FAN_AMBIENT_DIM</summary><pre>3</pre></details>\n",
+       "<details><summary>INPUT_CONES</summary><pre>{0 3 4}\n",
+       "{0 1 4}\n",
+       "{1 4 5}\n",
+       "{3 4 5}\n",
+       "{1 2 6}\n",
+       "{0 1 6}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
+       "1 0 1\n",
+       "1 -2 0\n",
+       "1 1 0\n",
+       "1 1/2 1/2\n",
+       "1 1 1\n",
+       "1 -1 0</pre></details>\n",
+       "<details><summary>LINEALITY_SPACE</summary><pre></pre></details>\n",
+       "<details><summary>MAXIMAL_CONES</summary><pre>{0 1 2}\n",
+       "{0 2 3}\n",
+       "{2 3 4}\n",
+       "{1 2 4}\n",
+       "{3 5 6}\n",
+       "{0 3 6}</pre></details>\n",
+       "<details><summary>RAYS</summary><pre>1 0 0\n",
+       "1 1 0\n",
+       "1 1/2 1/2\n",
+       "1 0 1\n",
+       "1 1 1\n",
+       "1 -2 0\n",
+       "1 -1 0</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "FAN_AMBIENT_DIM\n",
+       "\t3\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 3 4}\n",
+       "\t{0 1 4}\n",
+       "\t{1 4 5}\n",
+       "\t{3 4 5}\n",
+       "\t{1 2 6}\n",
+       "\t{0 1 6}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 0 0\n",
+       "\t1 0 1\n",
+       "\t1 -2 0\n",
+       "\t1 1 0\n",
+       "\t1 1/2 1/2\n",
+       "\t1 1 1\n",
+       "\t1 -1 0\n",
+       "\n",
+       "LINEALITY_SPACE\n",
+       "\t\n",
+       "\n",
+       "MAXIMAL_CONES\n",
+       "\t{0 1 2}\n",
+       "\t{0 2 3}\n",
+       "\t{2 3 4}\n",
+       "\t{1 2 4}\n",
+       "\t{3 5 6}\n",
+       "\t{0 3 6}\n",
+       "\n",
+       "RAYS\n",
+       "\t1 0 0\n",
+       "\t1 1 0\n",
+       "\t1 1/2 1/2\n",
+       "\t1 0 1\n",
+       "\t1 1 1\n",
+       "\t1 -2 0\n",
+       "\t1 -1 0\n"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "makeSmooth(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "adapted-frequency",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>4 -1\n",
+       "0 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 1}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t4 -1\n",
+       "\t0 1\n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[4 -1; 0 1],INPUT_CONES=[[0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "89d00725",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pm::Matrix<pm::Rational>\n",
+       "1 -1/4\n",
+       "0 1\n",
+       "1 0\n"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "makeSmooth(Y).INPUT_RAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5ab2dea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -861,7 +1078,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adapted-frequency",
+   "id": "8c1dbd9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ee67a55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d98a600",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a47d008",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5965c13d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -869,15 +1118,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
