makeSimplicial and makeSmooth examples

--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "wireless-beginning",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "printn (generic function with 1 method)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "parliamentary-george",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,17 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "painful-snapshot",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "makeSimplicial (generic function with 1 method)"
+       "makeSimplicial (generic function with 2 methods)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,10 +660,35 @@
     "end\n",
     "\n",
     "\n",
+    "\"\"\"\n",
+    "    makeSimplicial(::Polymake.BigObjectAllocated)\n",
     "\n",
-    "function makeSimplicial(X)\n",
+    "    Takes in a normal toric variety and returns a simplicial toric variety \n",
+    "    by subdividing (blowing up) the non-simplicial maximal cones.\n",
+    "\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 1 0;1 0 1;1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
+    "\n",
+    "julia> X.SIMPLICIAL\n",
+    "false\n",
+    "\n",
+    "julia> makeSimplicial(X).SIMPLICIAL\n",
+    "true\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0 0;0 1 0 0;0 0 1 0;1 -1 1 0; 1 0 -2 0],INPUT_CONES=[[0,1,2,3],[0,4]])\n",
+    "\n",
+    "julia> X.SIMPLICIAL\n",
+    "false\n",
+    "\n",
+    "julia> makeSimplicial(X).SIMPLICIAL\n",
+    "true\n",
+    "\"\"\"\n",
+    "\n",
+    "function makeSimplicial(X::Polymake.BigObjectAllocated)\n",
     "    Y = copy(X)\n",
     "    while (true)\n",
+    "        # If the initial toric variety is simplicial, the program terminates and returns it.\n",
     "        if Y.SIMPLICIAL==true\n",
     "            break\n",
     "        end\n",
@@ -721,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "needed-letter",
    "metadata": {},
    "outputs": [
@@ -731,7 +756,7 @@
        "makeSmooth (generic function with 1 method)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,6 +799,14 @@
     "1 0 1\n",
     "1 1 1\n",
     "2 1 1\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;0 1 0;0 0 1;0 -1 -1; -1 0 -1; -2 -1 0],INPUT_CONES=[[0,1,2],[0,1,3],[1,3,4],[1,2,4],[2,4,5],[0,2,5],[0,3,5],[3,4,5]])\n",
+    "\n",
+    "julia> X.SMOOTH_FAN\n",
+    "false\n",
+    "\n",
+    "julia> makeSmooth(X).SMOOTH_FAN\n",
+    "true\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -1012,59 +1045,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "adapted-frequency",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>4 -1\n",
-       "0 1</pre></details>"
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2 3}\n",
+       "{0 4}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0 0 0\n",
+       "0 1 0 0\n",
+       "0 0 1 0\n",
+       "1 -1 1 0\n",
+       "1 0 -2 0</pre></details>"
       ],
       "text/plain": [
        "type: NormalToricVariety\n",
        "\n",
        "INPUT_CONES\n",
-       "\t{0 1}\n",
+       "\t{0 1 2 3}\n",
+       "\t{0 4}\n",
        "\n",
        "INPUT_RAYS\n",
-       "\t4 -1\n",
-       "\t0 1\n"
+       "\t1 0 0 0\n",
+       "\t0 1 0 0\n",
+       "\t0 0 1 0\n",
+       "\t1 -1 1 0\n",
+       "\t1 0 -2 0\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[4 -1; 0 1],INPUT_CONES=[[0, 1]])"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0 0;0 1 0 0;0 0 1 0;1 -1 1 0; 1 0 -2 0],INPUT_CONES=[[0,1,2,3],[0,4]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "89d00725",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "true"
+      ],
       "text/plain": [
-       "pm::Matrix<pm::Rational>\n",
-       "1 -1/4\n",
-       "0 1\n",
-       "1 0\n"
+       "true"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "makeSmooth(Y).INPUT_RAYS"
+    "makeSimplicial(X).SIMPLICIAL"
    ]
   },
   {
