added some comments to BerghA

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -47,27 +47,38 @@
     }
    ],
    "source": [
-    "#inputs are a stacky fan and a vector of booleans representing the distinguished structure.\n",
+    "\"\"\"\n",
+    "\n",
+    "    BerghA(F::StackyFan,D::Array{Int64,1})\n",
+    "\n",
+    "    Given a stacky fan F and a vector of booleans D representing the distinguished structure,\n",
+    "    returns a smooth stacky fan where the distinguished rays are independent.\n",
+    "\n",
+    "    \n",
+    "\"\"\"\n",
+    "\n",
     "function BerghA(F::StackyFan,D::Array{Int64,1})\n",
     "    X=deepcopy(F)\n",
     "    rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "    coneList=getCones(X.fan)\n",
     "    dim=size(rayMatrix,2)\n",
-    "    l=size(rayMatrix,1)\n",
+    "    numRays=size(rayMatrix,1)\n",
     "    #check if the vector D has length equal to the number of rays in F\n",
-    "    if l != size(D,1)\n",
+    "    if numRays != size(D,1)\n",
     "        error(\"length of vector representing distinguished structure does not agree with number of rays in stacky fan.\")\n",
     "    end\n",
     "    \n",
-    "    #A0\n",
+    "    #A0: initialization\n",
     "    while(true)\n",
     "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
     "        coneList=getCones(X.fan)\n",
-    "        #A1\n",
+    "        #A1: check if finished\n",
+    "        # Find S the set of cones that contain a distinguised ray and an interior a lattice point \n",
     "        #Note: cones in S are 1-indexed.\n",
     "        S=filter(cone->distinguishedAndIntPoint(cone,rayMatrix,D),coneList)\n",
     "        printn(rayMatrix)\n",
     "        printn(S)\n",
+    "        # If S is empty, the program terminates.\n",
     "        if S==[]\n",
     "            break\n",
     "        end\n",
@@ -81,6 +92,7 @@
     "            C=coneConvert(cone,rayMatrix)\n",
     "            coneIntPoints=interiorPoints(C)\n",
     "            if coneIntPoints==nothing\n",
+    "                # does the program ever reach this line if it breaks at S empty?\n",
     "                return C\n",
     "            end\n",
     "            for point in coneIntPoints\n",
@@ -110,6 +122,7 @@
     "        \n",
     "        while(count(x->x>0,psi)>1)\n",
     "            #A4 - perform stacky star subdivision\n",
+    "            # Get the indices of the non-zero coefficients in psi\n",
     "            supportCone=findall(x->x!=0,psi)\n",
     "            X=stackyBlowup(X,[x-1 for x in supportCone],findBarycenter(supportCone,X.fan))\n",
     "            D=push!(D,1)\n",
@@ -306,15 +319,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
