--- a/BerghAHelpersDraft.ipynb
+++ b/BerghAHelpersDraft.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "established-economy",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Pkg\n",
     "Pkg.add(\"Oscar\")\n",
@@ -31,57 +15,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "published-reproduction",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Info: Precompiling Oscar [f1435218-dba5-11e9-1e4d-f1a5fab5fc13]\n",
-      "└ @ Base loading.jl:1278\n",
-      "[ Info: Regenerating 4ti2 wrappers in /home/dhruvbhatia00/.julia/packages/Singular/YZhEU/bin/v1.5\n",
-      "[ Info: Regenerating /home/dhruvbhatia00/.julia/packages/Singular/YZhEU/src/libraryfuncdictionary.jl\n",
-      "[ Info: Generating module common\n",
-      "[ Info: Generating module ideal\n",
-      "[ Info: Generating module graph\n",
-      "[ Info: Generating module fulton\n",
-      "[ Info: Generating module fan\n",
-      "[ Info: Generating module group\n",
-      "[ Info: Generating module polytope\n",
-      "[ Info: Generating module topaz\n",
-      "[ Info: Generating module tropical\n",
-      "[ Info: Generating module matroid\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "InitError: \u001b[91mIOError: could not spawn `jupyter kernelspec list --json`: no such file or directory (ENOENT)\u001b[39m\nduring initialization of module Polymake",
-     "output_type": "error",
-     "traceback": [
-      "InitError: \u001b[91mIOError: could not spawn `jupyter kernelspec list --json`: no such file or directory (ENOENT)\u001b[39m\nduring initialization of module Polymake",
-      "",
-      "Stacktrace:",
-      " [1] _spawn_primitive(::String, ::Cmd, ::Array{Any,1}) at ./process.jl:99",
-      " [2] #585 at ./process.jl:112 [inlined]",
-      " [3] setup_stdios(::Base.var\"#585#586\"{Cmd}, ::Array{Any,1}) at ./process.jl:196",
-      " [4] _spawn at ./process.jl:111 [inlined]",
-      " [5] open(::Cmd, ::Base.DevNull; write::Bool, read::Bool) at ./process.jl:370",
-      " [6] open at ./process.jl:361 [inlined]",
-      " [7] open(::Cmd, ::String, ::Base.DevNull) at ./process.jl:341",
-      " [8] read(::Cmd) at ./process.jl:410",
-      " [9] read(::Cmd, ::Type{String}) at ./process.jl:421",
-      " [10] prepare_jupyter_kernel_for_visualization() at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/ijulia.jl:26",
-      " [11] __init__() at /home/dhruvbhatia00/.julia/packages/Polymake/qeOTA/src/Polymake.jl:141",
-      " [12] _include_from_serialized(::String, ::Array{Any,1}) at ./loading.jl:697",
-      " [13] _require_search_from_serialized(::Base.PkgId, ::String) at ./loading.jl:782",
-      " [14] _tryrequire_from_serialized(::Base.PkgId, ::UInt64, ::Nothing) at ./loading.jl:712",
-      " [15] _require_from_serialized(::String) at ./loading.jl:744",
-      " [16] _require(::Base.PkgId) at ./loading.jl:1040",
-      " [17] require(::Base.PkgId) at ./loading.jl:928",
-      " [18] require(::Module, ::Symbol) at ./loading.jl:923",
-      " [19] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+      "Error: Cannot load 'Ferret' due to missing binary library\n",
+      "Please run './configure; make' in the 'pkg/ferret' directory\n",
+      "#I  Getting PackageInfo URLs...\n",
+      "#I  Command wget not found\n",
+      "#I  Retrieving PackageInfo.g from https://gap-packages.github.io/ferret/PackageInfo.g ...\n",
+      "#I  Command wget not found\n",
+      "#I  Downloading archive from URL https://github.com/gap-packages/ferret/releases/download/v1.0.5/ferret-1.0.5.tar.gz ...\n",
+      "#I  Command wget not found\n",
+      "#I  Saved archive to /var/folders/pw/d5s82hds2kb4dyyzttny28680000gn/T//tmaEbV17/ferret-1.0.5.tar.gz\n",
+      "#I  Extracting to /Users/nadabenabla/.julia/gaproot/v4.11/pkg/ferret-1.0.5 ...\n",
+      "#I  Checking dependencies for ferret...\n",
+      "#I    GAPDoc >= 1.5: true\n",
+      "#I  Command wget not found\n",
+      "#I  Running compilation script on /Users/nadabenabla/.julia/gaproot/v4.11/pkg/ferret-1.0.5 ...\n",
+      "#I  Checking dependencies for ferret...\n",
+      "#I    GAPDoc >= 1.5: true\n",
+      "#I  Command wget not found\n",
+      "#I  Package availability test failed\n",
+      "#I  (for ferret 1.0.5)\n",
+      "#I  Removed directory /Users/nadabenabla/.julia/gaproot/v4.11/pkg/ferret-1.0.5\n",
+      " -----    -----    -----      -      -----   \n",
+      "|     |  |     |  |     |    | |    |     |  \n",
+      "|     |  |        |         |   |   |     |  \n",
+      "|     |   -----   |        |     |  |-----   \n",
+      "|     |        |  |        |-----|  |   |    \n",
+      "|     |  |     |  |     |  |     |  |    |   \n",
+      " -----    -----    -----   -     -  -     -  \n",
+      "\n",
+      "...combining (and extending) ANTIC, GAP, Polymake and Singular\n",
+      "Version\u001b[32m 0.5.2 \u001b[39m... \n",
+      " ... which comes with absolutely no warranty whatsoever\n",
+      "Type: '?Oscar' for more information\n",
+      "(c) 2019-2021 by The Oscar Development Team\n"
      ]
     }
    ],
@@ -110,13 +84,14 @@
    ],
    "source": [
     "function coneMultiplicity(a,b)\n",
+    "    # why doesn't this use the input b?\n",
     "    return dot(a, [1,1,1,1])\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 5,
    "id": "familiar-cookbook",
    "metadata": {},
    "outputs": [
@@ -126,7 +101,7 @@
        "compareCones (generic function with 1 method)"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,9 +140,13 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "    Finds the extremal cones according to the number of distinguished rays and multiplicity.\n",
+    "    distinguished is a boolean vector whose size is equal to the number of rays\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "function extremalCones(coneList, rayMatrix, distinguished)\n",
-    "    # Finds the extremal cones according to # distinguished rays and multiplicity\n",
-    "    # distinguished is a boolean vector whose size is equal to the number of rays\n",
     "    # The i-th index is 1 if the i-th ray (in rayMatrix) is distinguished\n",
     "    maxCones = [coneList[1,:]]\n",
     "    for i in 1:size(coneList,1)\n",
@@ -452,8 +431,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fifty-projector",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "TypeError: non-boolean (Int64) used in boolean context",
+     "output_type": "error",
+     "traceback": [
+      "TypeError: non-boolean (Int64) used in boolean context",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[15]:1",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "if 3\n",
+    "    5\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aea58f9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,15 +469,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
