root construction bug fix

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "id": "fundamental-contamination",
+   "execution_count": 39,
+   "id": "hired-closure",
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,15 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "latter-johns",
+   "id": "characteristic-combination",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "id": "proof-harvard",
+   "execution_count": 40,
+   "id": "progressive-chrome",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,97 +131,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
-   "id": "thick-bishop",
+   "execution_count": 43,
+   "id": "under-eligibility",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1 2}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
-       "1 2 0\n",
-       "1 0 3</pre></details>"
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 2\n",
+       "1 0</pre></details>"
       ],
       "text/plain": [
        "type: NormalToricVariety\n",
        "\n",
        "INPUT_CONES\n",
-       "\t{0 1 2}\n",
+       "\t{0 1}\n",
        "\n",
        "INPUT_RAYS\n",
-       "\t1 0 0\n",
-       "\t1 2 0\n",
-       "\t1 0 3\n"
+       "\t1 2\n",
+       "\t1 0\n"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 2 0; 1 0 3],INPUT_CONES=[[0,1,2]])"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 2;1 0],INPUT_CONES=[[0,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
-   "id": "medieval-trunk",
+   "execution_count": 45,
+   "id": "broadband-fancy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001c14f390), [1, 1, 1], Dict(\"1,0,3\" => 1,\"1,2,0\" => 1,\"1,0,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a3db8c0), [3, 4], Dict(\"1,2\" => 3,\"1,0\" => 4))"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=addStackStructure(X,[1,1,1])"
+    "F=addStackStructure(X,[3,4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
-   "id": "virgin-stress",
+   "execution_count": 46,
+   "id": "amazing-crisis",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Polymake.Integer[1 0 0; 1 2 0]Polymake.Integer[1 2 0]Polymake.Integer[1 0 0]Polymake.Integer[1 0 0; 1 2 0]Polymake.Integer[1 2 0]Polymake.Integer[1 0 0][1 0 0; 1 2 0; 1 0 3]\n",
-      "Any[[0, 1, 2], [1, 2]]\n",
-      "Polymake.Integer[1 0 0; 1 2 0]"
+      "Polymake.Integer[1 2]Polymake.Integer[1 2][1 2; 1 0]\n",
+      "Any[]\n"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mBoundsError: attempt to access 3-element Array{Int64,1} at index [0]\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mBoundsError: attempt to access 3-element Array{Int64,1} at index [0]\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] setindex!(::Array{Int64,1}, ::Int64, ::Int64) at ./array.jl:847",
-      " [2] coneRayDecomposition(::Array{Int64,1}, ::Array{Int64,2}, ::Array{Polymake.Integer,1}, ::Array{Int64,1}) at /mnt/c/Users/kites/Documents/GitHub/polymakejl4tv/StackyFan.jl:774",
-      " [3] BerghA(::StackyFan, ::Array{Int64,1}) at ./In[294]:45",
-      " [4] top-level scope at In[297]:1",
-      " [5] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001a3db8c0), [3, 4], Dict(\"1,2\" => 3,\"1,0\" => 4))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "BerghA(F, [1, 1])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 286,
-   "id": "talented-miniature",
+   "id": "irish-astrology",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "numerous-wallace",
+   "id": "acquired-judge",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-sculpture",
+   "id": "pursuant-chapel",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mathematical-facing",
+   "id": "structured-transport",
    "metadata": {},
    "outputs": [],
    "source": []
