Updated StackyFan struct and BerghA code structure

--- a/BerghA.ipynb
+++ b/BerghA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "hired-closure",
+   "id": "c2adc387",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "characteristic-combination",
+   "id": "60d741ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "progressive-chrome",
+   "id": "a8892b3c",
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,7 @@
     "    dim=size(rayMatrix,2)\n",
     "    numRays=size(rayMatrix,1)\n",
     "    stackTracker=ones(Int64,numRays)\n",
+    "    \n",
     "    #check if the vector D has length equal to the number of rays in F\n",
     "    if numRays != size(D,1)\n",
     "        error(\"length of vector representing distinguished structure does not agree with number of rays in stacky fan.\")\n",
@@ -72,10 +73,11 @@
     "    #A0: initialization\n",
     "    while(true)\n",
     "        rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS)))\n",
-    "        printn(rayMatrix)\n",
+    "        println(rayMatrix)\n",
     "        coneList=getCones(X.fan)\n",
-    "        printn(coneList)\n",
-    "        printn(\" \")\n",
+    "        println(coneList)\n",
+    "        println(stackyWeights(X))\n",
+    "        println()\n",
     "        #A1: check if finished\n",
     "        # Find S the set of cones that contain a distinguised ray and an interior a lattice point \n",
     "        #Note: cones in S are 1-indexed.\n",
@@ -91,7 +93,8 @@
     "        #A2 - find interior points in Smax\n",
     "        intPoints=[]\n",
     "        for cone in Smax\n",
-    "            C=rowMinors(rayMatrix,cone)\n",
+    "            #C=rowMinors(rayMatrix,cone)\n",
+    "            C=coneConvert(cone,rayMatrix)\n",
     "            coneIntPoints=interiorPoints(C)\n",
     "            if coneIntPoints==nothing\n",
     "                # does the program ever reach this line if it breaks at S empty?\n",
@@ -122,39 +125,39 @@
     "            end\n",
     "        end\n",
     "        \n",
+    "        #TODO: Currently the distinguished rays D and psi coefficients are not\n",
+    "        #used in the output. Should these be removed? Also may need to annotate\n",
+    "        #what stackTracker does.\n",
+    "        \n",
+    "        # Convert arrays to dictionaries as constructing fan objects through subdivision\n",
+    "        # may reorder rays\n",
+    "        code_rays = mapslices(encode, Polymake.common.primitive(X.fan.RAYS), dims=2)\n",
+    "        # Track the indices of distinguished rays\n",
+    "        D_pairs = map((x,y) -> (x,y), code_rays, D)\n",
+    "        D_Dict = Dict(D_pairs)\n",
+    "        # Track psi as a linear combination of the generators\n",
+    "        psiPairs = map((x,y) -> (x,y), code_rays,psi)\n",
+    "        psiDict = Dict(psiPairs)\n",
+    "        # \n",
+    "        trackerPairs = map((x,y) -> (x,y), code_rays, stackTracker)\n",
+    "        trackerDict= Dict(trackerPairs)\n",
+    "        \n",
+    "        #A5 - repeat star subdivision\n",
     "        while(count(x->x>0,psi)>1)\n",
     "            #A4 - perform stacky star subdivision\n",
     "            # Get the indices of the non-zero coefficients in psi\n",
     "            supportCone=findall(x->x!=0,psi)\n",
     "            exceptional=findBarycenter(supportCone,X.fan)\n",
-    "            code_rays = mapslices(encode, Polymake.common.primitive(X.fan.RAYS), dims=2)\n",
-    "            D_pairs = map((x,y) -> (x,y), code_rays, D)\n",
-    "            D_Dict = Dict(D_pairs)\n",
-    "            psiPairs = map((x,y) -> (x,y), code_rays,psi)\n",
-    "            psiDict = Dict(psiPairs)\n",
-    "            trackerPairs = map((x,y) -> (x,y), code_rays,stackTracker)\n",
-    "            trackerDict= Dict(trackerPairs)\n",
     "            \n",
     "            X=stackyBlowup(X,[x-1 for x in supportCone],exceptional)\n",
     "            \n",
     "            G=gcd(exceptional)\n",
     "            primExcep=Polymake.common.primitive(exceptional)\n",
-    "            newRays=slicematrix(convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS))))\n",
+    "            \n",
+    "            # Update the dictionaries storing fan information\n",
     "            D_Dict[encode(primExcep)]=1\n",
     "            psiDict[encode(primExcep)]=1\n",
     "            trackerDict[encode(primExcep)]=G\n",
-    "            newD=Int64[]\n",
-    "            newpsi=Int64[]\n",
-    "            newTracker=Int64[]\n",
-    "            for ray in newRays\n",
-    "                E=encode(ray)\n",
-    "                push!(newD,D_Dict[E])\n",
-    "                push!(newpsi,psiDict[E])\n",
-    "                push!(newTracker,trackerDict[E])\n",
-    "            end\n",
-    "            psi=newpsi\n",
-    "            D=newD\n",
-    "            stackTracker=newTracker\n",
     "        \n",
     "            #A4 - modify psi\n",
     "            newpsi=zeros(Int64,length(psi))\n",
@@ -165,7 +168,23 @@
     "            end\n",
     "            psi=newpsi\n",
     "        end\n",
+    "        \n",
+    "        # Convert dictionaries back into arrays in the order of the new rays\n",
+    "        newRays=slicematrix(convert(Array{Int64,2},Array(Polymake.common.primitive(X.fan.RAYS))))\n",
+    "        newD=Int64[]\n",
+    "        newpsi=Int64[]\n",
+    "        newTracker=Int64[]\n",
+    "        for ray in newRays\n",
+    "            E=encode(ray)\n",
+    "            push!(newD,D_Dict[E])\n",
+    "            push!(newpsi,psiDict[E])\n",
+    "            push!(newTracker,trackerDict[E])\n",
+    "        end\n",
+    "        psi=newpsi\n",
+    "        D=newD\n",
+    "        stackTracker=newTracker\n",
     "    end\n",
+    "    \n",
     "    return X, stackTracker\n",
     "end"
    ]
@@ -173,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "under-eligibility",
+   "id": "b1619ea4",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "broadband-fancy",
+   "id": "2b4bf635",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d90997f-1e76-48d5-a81c-61f0885ea8c9",
+   "id": "2492ce3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "amazing-crisis",
+   "id": "b3fccb2b",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "irish-astrology",
+   "id": "874aa316",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -354,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "acquired-judge",
+   "id": "77b27ac9",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pursuant-chapel",
+   "id": "478ef8a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -385,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "structured-transport",
+   "id": "6c1acefa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -393,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.1",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -401,7 +420,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
